# libfsfat

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libfsfat.ini  libfsfat.pc.in  libfsfat.spec.in  setup.cfg.in  synctestdata.ps1  synctestdata.sh  tox.ini
fsfattools/: Makefile.am  digest_hash.c  digest_hash.h  fsfatinfo.c  fsfatmount.c  fsfattools_getopt.c  fsfattools_getopt.h  fsfattools_i18n.h  fsfattools_libbfio.h  fsfattools_libcerror.h  fsfattools_libclocale.h  fsfattools_libcnotify.h  fsfattools_libcpath.h  fsfattools_libfcache.h  fsfattools_libfdata.h  fsfattools_libfdatetime.h  fsfattools_libfguid.h  fsfattools_libfsfat.h  fsfattools_libhmac.h  fsfattools_libuna.h  fsfattools_output.c  fsfattools_output.h  fsfattools_signal.c  fsfattools_signal.h  fsfattools_unused.h  info_handle.c  info_handle.h  mount_dokan.c  mount_dokan.h  mount_file_entry.c  mount_file_entry.h  mount_file_system.c  mount_file_system.h  mount_fuse.c  mount_fuse.h  mount_handle.c  mount_handle.h  mount_path_string.c  mount_path_string.h
include/: Makefile.am  libfsfat.h.in
include/libfsfat/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libfsfat/: Makefile.am  fsfat_boot_record.h  fsfat_directory_entry.h  libfsfat.c  libfsfat.rc.in  libfsfat_allocation_table.c  libfsfat_allocation_table.h  libfsfat_block_descriptor.c  libfsfat_block_descriptor.h  libfsfat_block_tree.c  libfsfat_block_tree.h  libfsfat_block_tree_node.c  libfsfat_block_tree_node.h  libfsfat_boot_record.c  libfsfat_boot_record.h  libfsfat_chs_address.c  libfsfat_chs_address.h  libfsfat_cluster_block.c  libfsfat_cluster_block.h  libfsfat_cluster_block_data.c  libfsfat_cluster_block_data.h  libfsfat_cluster_block_vector.c  libfsfat_cluster_block_vector.h  libfsfat_date_time.c  libfsfat_date_time.h  libfsfat_debug.c  libfsfat_debug.h  libfsfat_definitions.h.in  libfsfat_directory.c  libfsfat_directory.h  libfsfat_directory_entry.c  libfsfat_directory_entry.h  libfsfat_error.c  libfsfat_error.h  libfsfat_extent.c  libfsfat_extent.h  libfsfat_extern.h  libfsfat_file_entry.c  libfsfat_file_entry.h  libfsfat_file_system.c  (+24 more)
msvscpp/: Makefile.am  libfsfat.sln
msvscpp/fsext_test_error/: fsext_test_error.vcproj
msvscpp/fsext_test_file_entry/: fsext_test_file_entry.vcproj
msvscpp/fsext_test_io_handle/: fsext_test_io_handle.vcproj
msvscpp/fsext_test_notify/: fsext_test_notify.vcproj
msvscpp/fsext_test_support/: fsext_test_support.vcproj
msvscpp/fsext_test_tools_info_handle/: fsext_test_tools_info_handle.vcproj
msvscpp/fsext_test_tools_output/: fsext_test_tools_output.vcproj
msvscpp/fsext_test_tools_signal/: fsext_test_tools_signal.vcproj
msvscpp/fsext_test_volume/: fsext_test_volume.vcproj
msvscpp/fsfat_test_allocation_table/: fsfat_test_allocation_table.vcproj
msvscpp/fsfat_test_block_descriptor/: fsfat_test_block_descriptor.vcproj
msvscpp/fsfat_test_block_tree/: fsfat_test_block_tree.vcproj
msvscpp/fsfat_test_block_tree_node/: fsfat_test_block_tree_node.vcproj
msvscpp/fsfat_test_boot_record/: fsfat_test_boot_record.vcproj
msvscpp/fsfat_test_cluster_block/: fsfat_test_cluster_block.vcproj
msvscpp/fsfat_test_directory/: fsfat_test_directory.vcproj
msvscpp/fsfat_test_directory_entry/: fsfat_test_directory_entry.vcproj
msvscpp/fsfat_test_error/: fsfat_test_error.vcproj
msvscpp/fsfat_test_extent/: fsfat_test_extent.vcproj
msvscpp/fsfat_test_file_entry/: fsfat_test_file_entry.vcproj
msvscpp/fsfat_test_io_handle/: fsfat_test_io_handle.vcproj
msvscpp/fsfat_test_name/: fsfat_test_name.vcproj
msvscpp/fsfat_test_notify/: fsfat_test_notify.vcproj
msvscpp/fsfat_test_support/: fsfat_test_support.vcproj
msvscpp/fsfat_test_tools_info_handle/: fsfat_test_tools_info_handle.vcproj
msvscpp/fsfat_test_tools_mount_path_string/: fsfat_test_tools_mount_path_string.vcproj
msvscpp/fsfat_test_tools_output/: fsfat_test_tools_output.vcproj
msvscpp/fsfat_test_tools_signal/: fsfat_test_tools_signal.vcproj
msvscpp/fsfat_test_volume/: fsfat_test_volume.vcproj
msvscpp/fsfatinfo/: fsfatinfo.vcproj
msvscpp/fsfatmount/: fsfatmount.vcproj
msvscpp/libbfio/: libbfio.vcproj
msvscpp/libcdata/: libcdata.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libcfile/: libcfile.vcproj
msvscpp/libclocale/: libclocale.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcpath/: libcpath.vcproj
msvscpp/libcsplit/: libcsplit.vcproj
pyfsfat/: Makefile.am  pyfsfat.c  pyfsfat.h  pyfsfat_datetime.c  pyfsfat_datetime.h  pyfsfat_error.c  pyfsfat_error.h  pyfsfat_file_attribute_flags.c  pyfsfat_file_attribute_flags.h  pyfsfat_file_entries.c  pyfsfat_file_entries.h  pyfsfat_file_entry.c  pyfsfat_file_entry.h  pyfsfat_file_object_io_handle.c  pyfsfat_file_object_io_handle.h  pyfsfat_file_system_formats.c  pyfsfat_file_system_formats.h  pyfsfat_integer.c  pyfsfat_integer.h  pyfsfat_libbfio.h  pyfsfat_libcerror.h  pyfsfat_libfsfat.h  pyfsfat_python.h  pyfsfat_unused.h  pyfsfat_volume.c  pyfsfat_volume.h
pyfsfat-python3/: Makefile.am
tests/: Makefile.am  fsfat_test_allocation_table.c  fsfat_test_block_descriptor.c  fsfat_test_block_tree.c  fsfat_test_block_tree_node.c  fsfat_test_boot_record.c  fsfat_test_cluster_block.c  fsfat_test_directory.c  fsfat_test_directory_entry.c  fsfat_test_error.c  fsfat_test_extent.c  fsfat_test_extent_index.c  fsfat_test_extents_footer.c  fsfat_test_extents_header.c  fsfat_test_file_entry.c  fsfat_test_functions.c  fsfat_test_functions.h  fsfat_test_getopt.c  fsfat_test_getopt.h  fsfat_test_io_handle.c  fsfat_test_libbfio.h  fsfat_test_libcerror.h  fsfat_test_libclocale.h  fsfat_test_libcnotify.h  fsfat_test_libcpath.h  fsfat_test_libfcache.h  fsfat_test_libfdata.h  fsfat_test_libfsfat.h  fsfat_test_libuna.h  fsfat_test_macros.h  fsfat_test_memory.c  fsfat_test_memory.h  fsfat_test_name.c  fsfat_test_notify.c  fsfat_test_support.c  fsfat_test_tools_info_handle.c  fsfat_test_tools_mount_path_string.c  fsfat_test_tools_output.c  fsfat_test_tools_signal.c  fsfat_test_unused.h  (+13 more)
tests/data/: boot_sector.1  (+2 more)
(+36 files in other folders)
