include_HEADERS = \
	libfsfat.h

pkginclude_HEADERS = \
	libfsfat/codepage.h \
	libfsfat/definitions.h \
	libfsfat/error.h \
	libfsfat/extern.h \
	libfsfat/features.h \
	libfsfat/types.h

EXTRA_DIST = \
	libfsfat.h.in \
	libfsfat/definitions.h.in \
	libfsfat/features.h.in \
	libfsfat/types.h.in

DISTCLEANFILES = \
	libfsfat.h \
	libfsfat/definitions.h \
	libfsfat/features.h \
	libfsfat/types.h \
	Makefile \
	Makefile.in

