MSVSCPP_FILES = \
	fsext_test_error/fsext_test_error.vcproj \
	fsext_test_file_entry/fsext_test_file_entry.vcproj \
	fsext_test_io_handle/fsext_test_io_handle.vcproj \
	fsext_test_notify/fsext_test_notify.vcproj \
	fsext_test_support/fsext_test_support.vcproj \
	fsext_test_tools_info_handle/fsext_test_tools_info_handle.vcproj \
	fsext_test_tools_output/fsext_test_tools_output.vcproj \
	fsext_test_tools_signal/fsext_test_tools_signal.vcproj \
	fsext_test_volume/fsext_test_volume.vcproj \
	fsfat_test_boot_record/fsfat_test_boot_record.vcproj \
	fsfatinfo/fsfatinfo.vcproj \
	fsfatmount/fsfatmount.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfsfat/libfsfat.vcproj \
	libhmac/libhmac.vcproj \
	libuna/libuna.vcproj \
	pyfsfat/pyfsfat.vcproj \
	libfsfat.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

