MSVSCPP_FILES = \
	fsfat_test_allocation_table/fsfat_test_allocation_table.vcproj \
	fsfat_test_block_descriptor/fsfat_test_block_descriptor.vcproj \
	fsfat_test_block_tree/fsfat_test_block_tree.vcproj \
	fsfat_test_block_tree_node/fsfat_test_block_tree_node.vcproj \
	fsfat_test_boot_record/fsfat_test_boot_record.vcproj \
	fsfat_test_directory/fsfat_test_directory.vcproj \
	fsfat_test_directory_entry/fsfat_test_directory_entry.vcproj \
	fsfat_test_error/fsfat_test_error.vcproj \
	fsfat_test_extent/fsfat_test_extent.vcproj \
	fsfat_test_file_entry/fsfat_test_file_entry.vcproj \
	fsfat_test_io_handle/fsfat_test_io_handle.vcproj \
	fsfat_test_name/fsfat_test_name.vcproj \
	fsfat_test_notify/fsfat_test_notify.vcproj \
	fsfat_test_support/fsfat_test_support.vcproj \
	fsfat_test_tools_info_handle/fsfat_test_tools_info_handle.vcproj \
	fsfat_test_tools_output/fsfat_test_tools_output.vcproj \
	fsfat_test_tools_signal/fsfat_test_tools_signal.vcproj \
	fsfat_test_volume/fsfat_test_volume.vcproj \
	fsfatinfo/fsfatinfo.vcproj \
	fsfatmount/fsfatmount.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfsfat/libfsfat.vcproj \
	libhmac/libhmac.vcproj \
	libuna/libuna.vcproj \
	pyfsfat/pyfsfat.vcproj \
	libfsfat.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

